--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,6 +9,6 @@
 <ion-content padding>
 
   <<h1>Hola mundo </h1>
-  <p>Abigail Magallan gutierrez</p>
+  <p>Abigail Magallan gutierrez es la hora es la hora </p>
 
 </ion-content>
